<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/margin_32"
    android:layout_marginEnd="@dimen/margin_32"
    android:layout_marginTop="@dimen/margin_32"
    android:orientation="vertical"
    tools:context=".ui.fragment.Login_01_02">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_find_account"
        android:layout_marginTop="@dimen/margin_40"
        android:contentDescription="@string/find_id" />

    <TextView
        android:id="@+id/find_id_business"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_id_business"
        style="@style/title_text20"/>

    <TextView
        android:id="@+id/tv_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_id_information"
        android:layout_marginTop="@dimen/margin_10"
        style="@style/tos_text14"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:isScrollContainer="false"
        app:errorEnabled="true"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:paddingVertical="@dimen/padding_14"
            android:id="@+id/name_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/company_name"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        app:errorEnabled="true"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:paddingVertical="@dimen/padding_14"
            android:id="@+id/company_number_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/company_registration_number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/btnStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:text="@string/confirm" />

</LinearLayout>