<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/size_300"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.fragment.FindIdDialogFragment">

    <TextView
        android:id="@+id/tv_findId"
        style="@style/title_text20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/find_id" />


    <TextView
        android:id="@+id/tv_information"
        style="@style/tos_text14"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information_match_id" />

    <View
        android:layout_marginTop="@dimen/margin_10"
        android:layout_gravity="center"
        android:layout_width="@dimen/size_200"
        android:layout_height="@dimen/size_1"
        android:background="@color/text_lightGrey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/padding_60">


        <TextView
            android:id="@+id/textView3"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/title_text16"
            android:text="@string/id_e" />

        <TextView
            android:gravity="center"
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/title_text16"
            android:text="mapoten" />

    </LinearLayout>

    <Button
        style="@style/btnStyle"
        android:id="@+id/btn_login"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:text="@string/login_do" />

    <TextView
        android:id="@+id/tv_cancel"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_30"
        android:layout_marginBottom="@dimen/margin_10"
        android:text="@string/cancel"
        style="@style/tos_text14"/>

</LinearLayout>