<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_40"
    android:layout_marginEnd="@dimen/margin_40"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragment.Login_01">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/logo"
            android:gravity="center"
            android:text="MapoTen"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/login"
        android:textSize="@dimen/text_18"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:isScrollContainer="false"
        app:boxCornerRadiusBottomEnd="@dimen/size_30"
        app:boxCornerRadiusBottomStart="@dimen/size_30"
        app:boxCornerRadiusTopEnd="@dimen/size_30"
        app:boxCornerRadiusTopStart="@dimen/size_30"
        app:expandedHintEnabled="false"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextStyle"
            android:id="@+id/id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/id"
            android:singleLine="true"
            android:textSize="@dimen/text_14"
            tools:ignore="SpeakableTextPresentCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextThemeOverlay"
        app:boxCornerRadiusBottomEnd="@dimen/size_30"
        app:boxCornerRadiusBottomStart="@dimen/size_30"
        app:boxCornerRadiusTopEnd="@dimen/size_30"
        app:boxCornerRadiusTopStart="@dimen/size_30"
        app:errorEnabled="true"
        app:expandedHintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextStyle"
            android:id="@+id/pwd_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passWord"
            android:inputType="textPassword"
            android:textSize="@dimen/text_14"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        style="@style/btnStyle"
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:text="@string/login"
         />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/autoLogin_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/auto_login"
            android:textColor="@color/text_darkGrey"
            android:textSize="@dimen/text_12"
            android:buttonTint="@color/text_middleGrey"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_findId_personal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center"
            android:gravity="center"
            android:text="@string/find_id_personal"
            android:textColor="@color/text_darkGrey"
            android:textSize="@dimen/text_12" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center"
            android:layout_marginStart="@dimen/margin_6"
            android:layout_marginEnd="@dimen/margin_6"
            android:gravity="center"
            android:text="/"
            android:textSize="@dimen/text_12" />

        <TextView
            android:id="@+id/tv_findId_business"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center"
            android:gravity="center"
            android:text="@string/find_id_business"
            android:textSize="@dimen/text_12" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_find_pwd"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_30"
        android:layout_gravity="end"
        android:text="@string/find_pwd"
        android:textSize="@dimen/text_12" />


    <Button
        style="@style/btnStyle"
        android:id="@+id/btn_signUp_personal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:text="@string/signUp_personal_e"
         />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/size_140"
            android:layout_height="@dimen/size_1"
            android:layout_gravity="center"
            android:background="@color/text_lightGrey" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_6"
            android:layout_marginEnd="@dimen/margin_6"
            android:text="@string/or"
            android:textColor="@color/text_lightGrey" />

        <View
            android:id="@+id/view2"
            android:layout_width="@dimen/size_140"
            android:layout_height="@dimen/size_1"
            android:layout_gravity="center"
            android:background="@color/text_lightGrey" />


    </LinearLayout>

    <Button
        style="@style/btnStyle"
        android:id="@+id/btn_signUp_business"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:text="@string/signUp_business_e" />


</LinearLayout>